<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/genre"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:onClick="cmusic"
        android:text="@string/country"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="131dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:onClick="rmusic"
        android:text="@string/rock_n_roll"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="226dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:onClick="bmusic"
        android:text="@string/blues"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="327dp" />
</LinearLayout>